# S.H.I.T

./: .gitignore  Cargo.toml  F02-1-19.dbc  build-and-run.sh  default_layout.ini
docs/plans/: 2026-02-28-multi-hardware-can-design.md
src/: main.rs
src/core/: dbc.rs  message.rs  mod.rs  signal.rs
src/decode/: decoder.rs  mod.rs
src/hardware/: can_collection.rs  can_interface.rs  can_manager.rs  mock.rs  mod.rs  serial_can.rs
src/input/: csv.rs  mod.rs  rlog.rs
src/playback/: engine.rs  mod.rs
src/plugins/: bench.rs  gdi.rs  mod.rs  wideband.rs
src/ui/: bit_visualizer.rs  dbc_editor.rs  dialogs.rs  graph.rs  live_mode.rs  mod.rs  multi_graph.rs  shortcuts.rs  signal_list.rs  statistics.rs  windows.rs
src/ui/timeline/: classic.rs  minimal.rs  mod.rs
